tests/baselines/reference/parser.asyncGenerators.functionExpressions.es2018.errors.txt
awaitInParameterInitializerIsError.ts(1,34): error TS2524: 'await' expressions cannot be used in a parameter initializer.
awaitMissingValueIsError.ts(2,10): error TS1109: Expression expected.
awaitNameIsError.ts(1,29): error TS1359: Identifier expected. 'await' is a reserved word that cannot be used here.
awaitParameterIsError.ts(1,30): error TS1359: Identifier expected. 'await' is a reserved word that cannot be used here.
nestedFunctionDeclarationNamedAwaitIsError.ts(2,14): error TS1359: Identifier expected. 'await' is a reserved word that cannot be used here.
nestedFunctionDeclarationNamedYieldIsError.ts(2,14): error TS1359: Identifier expected. 'yield' is a reserved word that cannot be used here.
nestedFunctionExpressionNamedAwaitIsError.ts(2,24): error TS1359: Identifier expected. 'await' is a reserved word that cannot be used here.
nestedFunctionExpressionNamedYieldIsError.ts(2,24): error TS1359: Identifier expected. 'yield' is a reserved word that cannot be used here.
yieldInParameterInitializerIsError.ts(1,34): error TS2523: 'yield' expressions cannot be used in a parameter initializer.
yieldNameIsError.ts(1,29): error TS1359: Identifier expected. 'yield' is a reserved word that cannot be used here.
yieldParameterIsError.ts(1,30): error TS1359: Identifier expected. 'yield' is a reserved word that cannot be used here.
yieldStarMissingValueIsError.ts(2,12): error TS1109: Expression expected.


==== functionExpressionIsOk.ts (0 errors) ====
    const f1 = async function * f() {
    };
==== awaitNameIsError.ts (1 errors) ====
    const f2 = async function * await() {
                                ~~~~~
!!! error TS1359: Identifier expected. 'await' is a reserved word that cannot be used here.
    };
==== yieldNameIsError.ts (1 errors) ====
    const f3 = async function * yield() {
                                ~~~~~
!!! error TS1359: Identifier expected. 'yield' is a reserved word that cannot be used here.
    };
==== awaitParameterIsError.ts (1 errors) ====
    const f4 = async function * (await) {
                                 ~~~~~
!!! error TS1359: Identifier expected. 'await' is a reserved word that cannot be used here.
    };
==== yieldParameterIsError.ts (1 errors) ====
    const f5 = async function * (yield) {
                                 ~~~~~
!!! error TS1359: Identifier expected. 'yield' is a reserved word that cannot be used here.
    };
==== awaitInParameterInitializerIsError.ts (1 errors) ====
    const f6 = async function * (a = await 1) {
                                     ~~~~~~~
!!! error TS2524: 'await' expressions cannot be used in a parameter initializer.
    };
==== yieldInParameterInitializerIsError.ts (1 errors) ====
    const f7 = async function * (a = yield) {
                                     ~~~~~
!!! error TS2523: 'yield' expressions cannot be used in a parameter initializer.
    };
==== nestedAsyncGeneratorIsOk.ts (0 errors) ====
    const f8 = async function * () {
        async function * g() {
        }
    };
==== nestedFunctionDeclarationNamedYieldIsError.ts (1 errors) ====
    const f9 = async function * () {
        function yield() {
                 ~~~~~
!!! error TS1359: Identifier expected. 'yield' is a reserved word that cannot be used here.
        }
    };
==== nestedFunctionExpressionNamedYieldIsError.ts (1 errors) ====
    const f10 = async function * () {
        const x = function yield() {
                           ~~~~~
!!! error TS1359: Identifier expected. 'yield' is a reserved word that cannot be used here.
        };
    };
==== nestedFunctionDeclarationNamedAwaitIsError.ts (1 errors) ====
    const f11 = async function * () {
        function await() {
                 ~~~~~
!!! error TS1359: Identifier expected. 'await' is a reserved word that cannot be used here.
        }
    };
==== nestedFunctionExpressionNamedAwaitIsError.ts (1 errors) ====
    const f12 = async function * () {
        const x = function await() {
                           ~~~~~
!!! error TS1359: Identifier expected. 'await' is a reserved word that cannot be used here.
        };
    };
==== yieldIsOk.ts (0 errors) ====
    const f13 = async function * () {
        yield;
    };
==== yieldWithValueIsOk.ts (0 errors) ====
    const f14 = async function * () {
        yield 1;
    };
==== yieldStarMissingValueIsError.ts (1 errors) ====
    const f15 = async function * () {
        yield *;
               ~
!!! error TS1109: Expression expected.
    };
==== yieldStarWithValueIsOk.ts (0 errors) ====
    const f16 = async function * () {
        yield * [];
    };
==== awaitWithValueIsOk.ts (0 errors) ====
    const f17 = async function * () {
        await 1;
    };
==== awaitMissingValueIsError.ts (1 errors) ====
    const f18 = async function * () {
        await;
             ~
!!! error TS1109: Expression expected.
    };
==== awaitAsTypeIsOk.ts (0 errors) ====
    interface await {}
    const f19 = async function * () {
        let x: await;
    };
==== yieldAsTypeIsOk.ts (0 errors) ====
    interface yield {}
    const f20 = async function * () {
        let x: yield;
    };
==== yieldInNestedComputedPropertyIsOk.ts (0 errors) ====
    const f21 = async function *() {
        const x = { [yield]: 1 };
    };
    